payer_agentforce_agents/ProviderSearchAndProfileLookup/force-app/main/default/objects/Credential__c/fields/Assigned_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Analyst__c</fullName>
    <label>Assigned Analyst</label>
    <length>255</length>
    <type>Text</type>
</CustomField>