payer_agentforce_agents/ProviderSearchAndProfileLookup/force-app/main/default/objects/Credential__c/fields/Committee_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Committee_Review_Date__c</fullName>
    <label>Committee Review Date</label>
    <type>Date</type>
</CustomField>