payer_agentforce_agents/ProviderSearchAndProfileLookup/force-app/main/default/objects/Credential__c/fields/Credentialing_Status__c.field-meta.xml
<CustomField>
    <fullName>Credentialing_Status__c</fullName>
    <label>Credentialing Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>